--- a/index.html
+++ b/index.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Registration form</title>
+        <title>Tabel</title>
     </head>
     <body>
-        <h1>REGISTRATION FORM</h1>
-        <h7>Full Name</h7><br>
-        <input type="text" placeholder="YOUR NAME">
-        <br>
-        <br>
-        <h7>Email</h7><br>
-        <input type="text" placeholder="you@example.com">
-        <br>
-        <br>
-        <h7>Password</h7><br>
-        <input type="password" >
-        <br>
-        <br>
-        <h7>Gender</h7><br>
-        <label> <input type="radio" name="gender">Male</label>
-        <label> <input type="radio" name="gender">Female</label>
-        <label> <input type="radio" name="gender">Other</label>
-        <br> 
-        <br>
+       <table border="1">
+        <tr>
+            <th rowspan="3">Day</th>
+            <th colspan="3">Seminar</th>
+
+            
+        </tr>
+        <tr>
+            <th colspan="2">Schedule</th>
+            <th rowspan="2">Topic </th>
+        </tr>
+        <tr>
+            <th>begin</th>
+            <th>End</th>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>8:00a.m</td>
+            <td>5:00p.m</td>
+            <td>Introduction to XML</td>
+        </tr>
+        <tr>
+            <td rowspan="3">Tuesday</td>
+            <td>8:00a.m</td>
+            <td>11:00a.m</td>
+            <td rowspan="1.5">XPath</td>
+
+        </tr>
+        <tr>
+            <td>11:00a.m</td>
+            <td>2.00p.m</td>
+            <td rowspan="2">XSL transformations</td>
+        </tr>
+        <tr>
+            <td>2:00p.m</td>
+            <td>5:00p.m</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>8:00a.m</td>
+            <td>12:00p.m</td>
+            <td>XSL Formatting Objects</td>
+        </tr>
         
-        <h7>Description</h7>
-        <br>
-        <textarea> </textarea>
-        <br>
-        <br>
+    </table>
 
-        <label><input type="checkbox"> I agree to the terms and conditions</label>
-        <br>
-        <br>
-
-        <button>SUBMIT</button>
 
     </body>
 </html>
